<resources>
    <string name="app_name">BucketList</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="text_howru">Как прошёл ваш день?</string>
    <string name="image_icon">icon</string>
    <string name="text_wish_places">Места, которые я хочу посетить:</string>
    <string name="text_places">places</string>
    <string name="text_ekb">г. Екатеринбург</string>
    <string name="txt_travels">Путешествуем вместе</string>
    <string name="icon">иконка приложения</string>
    <string name="search">поиск</string>
    <string name="txt_home">"иконка дома "</string>
    <string name="txt_kremlin">Кремль</string>
    <string name="ic_nevyansk_town">невьянская башня</string>
    <string name="ic_search">поиск</string>
    <string name="txt_cathedral">собор Василия Блаженного</string>
    <string name="txt_cathedral_isaak">Исаакевский собор</string>
    <string name="txt_old_railway">Старый вокзал</string>
    <string name="txt_heart">сердце</string>
    <string name="txt_gray_heart">серое сердце</string>
    <string name="txt_town">невьянская башня</string>
    <string name="txt_icon">иконка приложения</string>
    <string name="txt_triangle">треугольник</string>
    <string name="txt_lake_baikal">Озеро Байкал</string>
    <string name="txt_write">начните писать...</string>
    <string name="txt_moredescription_kizhi">Кижи – один из 1369 островов в северо-восточной части Онежского озера, являющийся визитной карточкой Карелии. Расположенный в 68 км от Петрозаводска, он входит в число важнейших культурных достопримечательностей России. Места здесь удивительно красивы, лабиринт из сотен живописных островов и заливов гармонично сплетен в уникальный природный ландшафт. Здесь уникальный комплекс деревянных построек, созданных в Карелии, по исконно русской технологии- исключительно долотом и топором, без использования пил и гвоздей. Скалы с растущими на них соснами, причудливые в своей извилистости линии берегов, играющие цветами самой разнообразной растительности луга – всё это делает Кижи действительно красивым и неповторимым местом.	</string>
    <string name="txt_moredescription_trinity_lavra">Троице-Сергиева Лавра – расположенный в Сергиевом Посаде крупнейший в стране православный мужской монастырь, подчиняющийся непосредственно Патриарху. В основанной почти 7 столетий назад обители в настоящее время проживает около 200 монахов. Комплекс монастырских храмов, в 1993 году вошедший в список Всемирного наследия ЮНЕСКО как выдающийся памятник архитектуры XV-XVIII вв., открыт для паломников и туристов.	</string>
    <string name="txt_moredescription_pskov_kremlin">"Псковский кремль – масштабное фортификационное сооружение, сохранившееся в древнем городе со времен Средневековья. Мощная крепость занимает территорию 3 га в историческом центре Пскова, на высоком берегу возле слияния рек Великой и Псковы. Псковский кремль является великолепным архитектурным памятником, который не имеет аналогов на территории России. Псковичи уверены, что лишь только тот, кто увидел стены кремля, сумеет понять душу древнего города.
 Старое название кремля – Кром (огороженная территория). Стены и башни старинного форта имеют длинную историю. Они видели народные бунты и вольное псковское вече, набеги ливонских рыцарей и фашистскую оккупацию. Много раз древний Кром подвергался разрушениям и отстраивался вновь."	</string>
    <string name="txt_moredescription_motherland_mother">"«Родина-мать зовет» — название главной скульптуры мемориального комплекса, построенного на Мамаевом кургане в городе-герое Волгограде. Холм, на котором стоит фигура женщины с мечом, возвышается на 14 м, а сама статуя имеет высоту 85 метров. «Родина-мать» стала первой в мире статуей, выполненной из железобетона. Она господствует над окружающей местностью и видна с расстояния десятков километров.
 Скульптура Родины-матери – один из самых посещаемых объектов Волгограда. Ежегодно сюда приходят сотни тысяч людей, чтобы почтить память воинов и мирных жителей, погибших в годы Великой Отечественной войны. Цветы к монументу несут сами волгоградцы, туристы, приехавшие из разных частей России, и зарубежные путешественники."	</string>
    <string name="txt_moredescription_novgorod_kremlin">"Нижегородский кремль – древняя крепость и одновременно главная историческая достопримечательность Нижнего Новгорода. Удивительное архитектурное сооружение, выдержавшее бесчисленное количество татарских набегов и не сдавшее своих позиций даже в тяжелые времена смуты и войн, было и остается сердцем города вот уже более шестисот лет.

 В отличие от Московского, Нижегородский кремль не обладает ярко выраженным лоском величия, но именно в его стенах можно ощутить настоящий дух русской старины и прикоснуться к полузабытой истории государства. Расположенная на возвышенности у слияния Волги и Оки, крепость по сей день является официальной резиденцией нижегородского губернатора и мэра города."	</string>
    <string name="txt_moredescription_peterhof">"Город Петергоф принадлежит к числу ведущих и интереснейших дворцово-парковых комплексов мира. Мировую славу Петергофу принесли его уникальные дворцы, парки и фонтаны. Петергоф входит в состав Петродворцового района Санкт-Петербурга, находится на берегу Финского залива.
 В настоящее время Петергоф является крупным научным и культурным центром. В нём находится большое количество различных факультетов Санкт-Петербургского университета, множество научных и проектных институтов."	</string>
    <string name="txt_moredescription_rostov">"Исторический центр, визитная карточка Ростова Великого, который в свою очередь заслуженно считается жемчужиной Золотого Кольца России. На территории кремля происходили все знаковые для древнего города исторические события и сегодня он является самым посещаемым и популярным туристическим местом в Ростове Великом.
 В настоящее время Ростовский кремль представляет собой музей-заповедник и его территорию можно разделить на три основные части: архиерейский двор, соборная площадь и митрополичий сад."	</string>
    <string name="txt_moredescription_kremlin">"Полурежимный статус Московского Кремля объясняется тем, что весь комплекс одновременно и памятник, включенный в Список Всемирного культурного наследия ЮНЕСКО, и официальная резиденция Президента Российской Федерации.

 Кремль представляет собой 20 башен, стены высотой от 5 до 19 м, толщиной от 3 до 7 м и общей протяженностью - 2,5 км, музеи, соборы, сады и другие достопримечательности. Кремль был деревянным, белокаменным, разрушался, горел, многократно достраивался и перестраивался, но каждый раз становился еще более величественным."	</string>
    <string name="txt_moredescription_isaak">"Исаакиевский собор – одно из самых значительных и красивых купольных зданий во всем мире. Масштабы постройки впечатляют: она является четвертой по размеру христианской святыней после римского собора Святого Петра, лондонской церкви Святого Павла и флорентийского храма Святой Марии.

 Высота сооружения составляет 101,5 м, а его вместимость – около 12 тысяч человек. Сегодня Исаакиевскому собору присвоен статус музея-памятника, но четыре раза в год, по самым значительным праздникам, здесь проводятся религиозные службы. Официальное название – храм преподобного Исаакия Далматского, в честь которого и была возведена церковь.</string>
    <string name="txt_moredescription_baikal">"Озеро Байкал, расположенное на юге Восточной Сибири, на границе Иркутской области и Республики Бурятия, относится к числу самых древних водоемов нашей планеты. Но больше всего оно известно тем, что является самым глубоким озером на Земле и одновременно крупнейшим естественным резервуаром пресной воды – 19% всех мировых запасов.
 И сам Байкал, и прибрежные территории отличает неповторимая в своем разнообразии флора и фауна, что делает эти места поистине уникальными, неизменно привлекающими к себе внимание научных умов и многочисленных любителей путешествий и настоящих искателей приключений."	</string>
    <string name="txt_smalldescription_baikal">Крупнейший пресноводный водоем на территории России и самое глубокое озеро на Земле, чистота воды в котором отвечает самым высоким стандартам качества.</string>
    <string name="txt_smalldescription_isaak">Самый известный и крупный храм Санкт-Петербурга, выдающийся пример русской религиозной архитектуры.</string>
    <string name="txt_smalldescription_kremlin">Московский Кремль, главный из всех кремлей, единственный пишется с большой буквы. Это самая крупная действующая крепость Европы.</string>
    <string name="txt_smalldescription_rostov">Величественное каменное укрепление в старинном городе Ростове Великом.</string>
    <string name="txt_rostov_kremlin">Ростовский кремль</string>
    <string name="txt_peterhof">Петергоф</string>
    <string name="txt_smalldescription_peterhof">Жемчужина петровской эпохи и место, которое стремятся посетить туристы из России и зарубежные путешественники.</string>
    <string name="txt_novgorod_kremlin">Нижегородский Кремль</string>
    <string name="txt_smalldescription_novgorod_kremlin">Крепость в историческом центре Нижнего Новгорода и его древнейшая часть, главный общественно-политический и историко-художественный комплекс города.</string>
    <string name="txt_motherland_mother">Мамаев Курган и скульптура «Родина-мать зовет»</string>
    <string name="txt_smalldescription_motherland_mother">Памятник «Родина-мать зовет» является композиционным центром ансамбля «Героям Сталинградской битвы», он выполнен в виде статуи женщины-матери, которая шагает вперед с поднятым мечом, призывая своих сыновей к битве с врагом. У подножия памятника «Родина-мать зовет» находится вершина Мамаева кургана – площадь Скорби.</string>
    <string name="txt_pskov_kremlin">Псковский кремль (Псковский Кром)</string>
    <string name="txt_smalldescription_pskov">Самая большая крепость Европы, с девятикилометровыми стенами и площадью более трех гектаров. За все время своего существования Кром выдержал более двадцати осад, но при этом практически не изменился за свою тысячелетнюю историю.</string>
    <string name="txt_trinity_sergius_lavra">Троице-Сергиева Лавра</string>
    <string name="txt_smalldescription_trinity_sergiuslavra">Крупнейший мужской монастырь Русской православной церкви с многовековой историей.</string>
    <string name="txt_kizhi">Кижи</string>
    <string name="txt_smalldescription_kizhi">Остров в Онежском озере, на котором расположен музей традиционной крестьянской культуры Русского Севера, один из крупнейших и известнейших в России музеев-заповедников под открытым небом.</string>
</resources>