<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDBC1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/image_icon"
        android:src="@drawable/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="13dp">

    </ImageView>

    <LinearLayout
        android:layout_width="214dp"
        android:layout_height="35dp"
        android:background="@drawable/shape_rounded_stroke"
        android:contentDescription="@string/text_places"
        android:orientation="horizontal"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_wish_places"
            android:textColor="@color/black"
            android:textSize="12sp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="20dp"
        android:layout_marginStart="72dp"
        android:background="@drawable/shape_rounded_stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181">

        <TextView
            android:layout_width="106dp"
            android:layout_height="17dp"
            android:text="@string/text_ekb"
            android:textSize="12sp">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>