<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF4ED"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_header"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#B4C1A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoblock"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_rounded_stroke">

            <ImageView
                android:id="@+id/img_cathedral_vasilia"
                android:layout_width="88dp"
                android:layout_height="85dp"
                android:layout_margin="6dp"
                android:src="@drawable/cathedral_vasilia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/txt_cathedral" />

            <ImageButton
                android:id="@+id/btn_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/icon_heart"
                android:contentDescription="@string/txt_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </ImageButton>

            <ImageButton
                android:id="@+id/btn_gray_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/icon_gray_heart"
                android:contentDescription="@string/txt_gray_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/btn_triangle"
                android:layout_width="21dp"
                android:layout_height="23dp"
                android:background="@drawable/triangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/txt_triangle">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/infoblock"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_rounded_stroke">

            <ImageView
                android:id="@+id/img_cathedral_isaak"
                android:layout_width="86dp"
                android:layout_height="85dp"
                android:layout_margin="6dp"
                android:contentDescription="@string/txt_cathedral_isaak"
                android:src="@drawable/cathedral_isaak"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <ImageButton
                android:id="@id/btn_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/icon_heart"
                android:contentDescription="@string/txt_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </ImageButton>

            <ImageButton
                android:id="@id/btn_gray_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/icon_gray_heart"
                android:contentDescription="@string/txt_gray_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <ImageButton
                android:id="@id/btn_triangle"
                android:layout_width="21dp"
                android:layout_height="23dp"
                android:background="@drawable/triangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/txt_triangle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/infoblock"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_rounded_stroke">

            <ImageView
                android:id="@+id/img_kremlin"
                android:layout_width="86dp"
                android:layout_height="85dp"
                android:layout_margin="6dp"
                android:src="@drawable/kremlin_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/txt_kremlin"/>
            <ImageButton
                android:id="@id/btn_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/icon_heart"
                android:contentDescription="@string/txt_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@id/btn_gray_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/icon_gray_heart"
                android:contentDescription="@string/txt_gray_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <ImageButton
                android:id="@id/btn_triangle"
                android:layout_width="21dp"
                android:layout_height="23dp"
                android:background="@drawable/triangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/txt_triangle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/infoblock"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_rounded_stroke">

            <ImageView
                android:id="@+id/img_old_railway"
                android:layout_width="86dp"
                android:layout_height="85dp"
                android:layout_margin="6dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/old_railway"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/txt_old_railway">

            </ImageView>

            <ImageButton
                android:id="@id/btn_heart"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/icon_heart"
                android:contentDescription="@string/txt_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </ImageButton>

            <ImageButton
                android:id="@+id/btn_gray_heart4"
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/icon_gray_heart"
                android:contentDescription="@string/txt_gray_heart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <ImageButton
                android:id="@id/btn_triangle"
                android:layout_width="21dp"
                android:layout_height="23dp"
                android:background="@drawable/triangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/txt_triangle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_house"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/house"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/txt_home"/>

        <ImageButton
            android:id="@+id/btn_kremlin"
            android:layout_width="47dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/ic_kremlin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/txt_kremlin">

        </ImageButton>

        <ImageButton
            android:id="@+id/btn_town"
            android:layout_width="37dp"
            android:layout_height="45dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/nevyansk_town"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/txt_town">

        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:backgroundTint="#BBC3B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="53dp"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="28dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txt_icon">

    </ImageView>

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/ic_search"
        android:src="@drawable/ic_lupa"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="13dp">

    </ImageView>



</androidx.constraintlayout.widget.ConstraintLayout>